--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
         .card-button:hover {
             background-color: #0452b8;
         }
+        .hero-sec img{
+            box-shadow: 0px 0px 20px 0px #00000029;
+            border-radius: 4px;
+        }
     </style>
 </head>
 
@@ -206,7 +210,7 @@
             <p class="dont-p">Don’t Miss Out – Your Next Step Awaits!</p>
         </div>
         <div class="hero-sec">
-            <img src="images/hero-img.webp" alt="">
+            <img src="images/hero-img.svg" alt="">
         </div>
         <div class="">
             <p class="Hello-there">Hello there,</p>
